<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright 2021 Goldman Sachs
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>legend-depot</artifactId>
        <groupId>org.finos.legend.depot</groupId>
        <version>2.43.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <name>Legend Depot - Notifications- Services</name>
    <artifactId>legend-depot-notifications-services</artifactId>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- DEPOT -->
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-notifications-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-core-schedules-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-core-tracing</artifactId>
        </dependency>
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-core-authorisation</artifactId>
        </dependency>


        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-store-mongo</artifactId>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-core-data-store-mongo</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-core-data-store-mongo</artifactId>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-entities-store-mongo</artifactId>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <!-- DEPOT -->

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.inject</groupId>
            <artifactId>jakarta.inject-api</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
              <groupId>${junit.groupId}</groupId>
            <artifactId>${junit.artifactId}</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.bwaldvogel</groupId>
            <artifactId>mongo-java-server</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.finos.legend.depot</groupId>
            <artifactId>legend-depot-notifications-store-mongo</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
